--- a/Project_UI/MainWindow.xaml
+++ b/Project_UI/MainWindow.xaml
@@ -115,6 +115,7 @@
                     Height="25"
                     Width="200"
                     Margin="0,0,5,0"/>
+                
                 <Button
                     x:Name="SearchButton"
                     Click="SearchButton_Click"
@@ -172,13 +173,10 @@
                             HorizontalAlignment="Left">
 
                             <StackPanel
-                                x:Name="ComplexFilterType"
-                                Orientation="Vertical"
-                                HorizontalAlignment="Left"
+                                x:Name="FilterType"
                                 Style="{StaticResource FilterItem}">
 
-                                <Grid
-                                    Width="225">
+                                <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
                                         <ColumnDefinition Width="Auto"/>
@@ -238,6 +236,45 @@
                                         Style="{StaticResource FilterTypeChildCheckBox}"/>
                                 </StackPanel>
                                 
+                            </StackPanel>
+                            
+                            <StackPanel
+                                x:Name="FilterPrice"
+                                Background="#f5f5f5"
+                                Style="{StaticResource FilterItem}">
+
+                                <TextBlock
+                                    Text="Цена:"
+                                    FontSize="15"
+                                    FontWeight="Medium"/>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="0,5*"/>
+                                        <ColumnDefinition Width="0,5*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock
+                                        Grid.Column="0"
+                                        Text="От:"
+                                        Style="{StaticResource FilterPriceText}"/>
+
+                                    <TextBox
+                                        Grid.Column="0"
+                                        x:Name="FilterPriceFrom"
+                                        Style="{StaticResource FilterPriceTextBox}"/>
+
+                                    <TextBlock
+                                        Grid.Column="1"
+                                        Text="до:"
+                                        Style="{StaticResource FilterPriceText}"/>
+
+                                    <TextBox
+                                        Grid.Column="1"
+                                        x:Name="FilterPriceTo"
+                                        Style="{StaticResource FilterPriceTextBox}"/>
+                                </Grid>
+
                             </StackPanel>
                             
                         </StackPanel>
