--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -78,7 +78,10 @@
     </Style>
 
     <Style x:Key="FilterItem" TargetType="StackPanel">
-        
+        <Setter Property="Width" Value="227"/>
+        <Setter Property="Margin" Value="0,2"/>
+        <Setter Property="Orientation" Value="Vertical"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
     </Style>
 
     <Style x:Key="ParentFilterButton" TargetType="Button">
@@ -91,6 +94,22 @@
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="IsChecked" Value="False"/>
         <Setter Property="Visibility" Value="Collapsed"/>
+    </Style>
+
+    <Style x:Key="FilterPriceText" TargetType="TextBlock">
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="Padding" Value="0,5,0,0"/>
+        <Setter Property="Margin" Value="17,0,0,3"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="Foreground" Value="LightGray"/>
+    </Style>
+
+    <Style x:Key="FilterPriceTextBox" TargetType="TextBox">
+        <Setter Property="Width" Value="70"/>
+        <Setter Property="Height" Value="18"/>
+        <Setter Property="Margin" Value="0,0,3,0"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
 
     <Style x:Key="ContentField" TargetType="Border">
