--- a/Project_UI/MainWindow.xaml
+++ b/Project_UI/MainWindow.xaml
@@ -253,22 +253,22 @@
                                     <TextBlock
                                         Grid.Column="0"
                                         Text="От:"
-                                        Style="{StaticResource FilterPriceText}"/>
+                                        Style="{StaticResource FilterNumericText}"/>
 
                                     <TextBox
                                         Grid.Column="0"
                                         x:Name="FilterPriceFrom"
-                                        Style="{StaticResource FilterPriceTextBox}"/>
+                                        Style="{StaticResource FilterNumericTextBox}"/>
 
                                     <TextBlock
                                         Grid.Column="1"
                                         Text="до:"
-                                        Style="{StaticResource FilterPriceText}"/>
+                                        Style="{StaticResource FilterNumericText}"/>
 
                                     <TextBox
                                         Grid.Column="1"
                                         x:Name="FilterPriceTo"
-                                        Style="{StaticResource FilterPriceTextBox}"/>
+                                        Style="{StaticResource FilterNumericTextBox}"/>
                                 </Grid>
 
                             </StackPanel>
@@ -346,7 +346,46 @@
                                 </StackPanel>
 
                             </StackPanel>
-                            
+
+                            <StackPanel
+                                x:Name="FilterPrintingWidth"
+                                Background="#f5f5f5"
+                                Style="{StaticResource FilterItem}">
+
+                                <TextBlock
+                                    Text="Ширина печати:"
+                                    FontSize="15"
+                                    FontWeight="Medium"/>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="0,5*"/>
+                                        <ColumnDefinition Width="0,5*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock
+                                        Grid.Column="0"
+                                        Text="От:"
+                                        Style="{StaticResource FilterNumericText}"/>
+
+                                    <TextBox
+                                        Grid.Column="0"
+                                        x:Name="FilterPrintingWidthFrom"
+                                        Style="{StaticResource FilterNumericTextBox}"/>
+
+                                    <TextBlock
+                                        Grid.Column="1"
+                                        Text="до:"
+                                        Style="{StaticResource FilterNumericText}"/>
+
+                                    <TextBox
+                                        Grid.Column="1"
+                                        x:Name="FilterPrintingWidthTo"
+                                        Style="{StaticResource FilterNumericTextBox}"/>
+                                </Grid>
+
+                            </StackPanel>
+
                         </StackPanel>
                     </Grid>
                 </Border>
