--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -95,7 +95,7 @@
         <Setter Property="Visibility" Value="Collapsed"/>
     </Style>
 
-    <Style x:Key="FilterPriceText" TargetType="TextBlock">
+    <Style x:Key="FilterNumericText" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Bottom"/>
         <Setter Property="Padding" Value="0,5,0,0"/>
         <Setter Property="Margin" Value="15,0,0,3"/>
@@ -104,7 +104,7 @@
         <Setter Property="Foreground" Value="LightGray"/>
     </Style>
 
-    <Style x:Key="FilterPriceTextBox" TargetType="TextBox">
+    <Style x:Key="FilterNumericTextBox" TargetType="TextBox">
         <Setter Property="Width" Value="100"/>
         <Setter Property="Height" Value="18"/>
         <Setter Property="Margin" Value="0,0,3,0"/>
