--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -77,8 +77,21 @@
 
     </Style>
 
+    <Style x:Key="ListBoxItem" TargetType="ListBoxItem">
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBoxItem">
+                    <ContentPresenter/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <Style x:Key="FilterItem" TargetType="StackPanel">
-        <Setter Property="Width" Value="277"/>
+        <Setter Property="Width" Value="270"/>
         <Setter Property="Margin" Value="0,2"/>
         <Setter Property="Orientation" Value="Vertical"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
@@ -98,7 +111,7 @@
     <Style x:Key="FilterNumericText" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Bottom"/>
         <Setter Property="Padding" Value="0,5,0,0"/>
-        <Setter Property="Margin" Value="15,0,0,3"/>
+        <Setter Property="Margin" Value="12,0,0,3"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Foreground" Value="LightGray"/>
