--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -102,6 +102,24 @@
         <Setter Property="Width" Value="20"/>
     </Style>
 
+    <Style x:Key="FilterListBoxItem" TargetType="ListBoxItem">
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Margin" Value="0,1,0,1"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#E6E6E6"/>
+            </Trigger>
+            <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                <Setter Property="Background" Value="#D8EDF8"/>
+                <Setter Property="BorderBrush" Value="#80B3D3"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="FilterCheckBox" TargetType="CheckBox">
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="FontWeight" Value="Medium"/>
