--- a/Project_UI/MainWindow.xaml
+++ b/Project_UI/MainWindow.xaml
@@ -253,7 +253,7 @@
                                     Margin="10,0,0,0"
                                     SelectionMode="Multiple"
                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                    Visibility="Visible">
+                                    Visibility="Collapsed">
                                     <ListBox.ItemContainerStyle>
                                         <Style TargetType="ListBoxItem" BasedOn="{StaticResource FilterListBoxItem}">
                                             <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListBoxItem_PreviewMouseLeftButtonDown"/>
@@ -309,7 +309,7 @@
                                     Margin="10,0,0,0"
                                     SelectionMode="Multiple"
                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                    Visibility="Visible">
+                                    Visibility="Collapsed">
                                     <ListBox.ItemContainerStyle>
                                         <Style TargetType="ListBoxItem" BasedOn="{StaticResource FilterListBoxItem}">
                                             <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListBoxItem_PreviewMouseLeftButtonDown"/>
@@ -403,7 +403,7 @@
                                     Margin="10,0,0,0"
                                     SelectionMode="Multiple"
                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                    Visibility="Visible">
+                                    Visibility="Collapsed">
                                     <ListBox.ItemContainerStyle>
                                         <Style TargetType="ListBoxItem" BasedOn="{StaticResource FilterListBoxItem}">
                                             <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListBoxItem_PreviewMouseLeftButtonDown"/>
